# workflow-inspector

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  ci.yml.new
src/workflow_inspector/: __init__.py  cli.py  client.py  cost.py  models.py  optimization.py  performance.py  security.py
tests/: test_workflow_inspector.py
