[project]
name = "workflow-inspector"
version = "0.1.0"
description = "Analyze and optimize GitHub Actions workflows — cost tracking, performance bottlenecks, security linting, and optimization suggestions"
readme = "README.md"
authors = [{ name = "jlaportebot", email = "jlaportebot@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.5.0",
    "ty>=0.0.51",
]
test = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
]
lint = [
    "ruff>=0.5.0",
    "ty>=0.0.51",
]

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",        # docstring rules
    "COM812",   # trailing comma in format string
    "ISC001",   # redundant isinstance check
    "PLR0913",  # too many arguments
    "TRY003",   # avoid specifying long messages outside exception
    "RUF003",   # ambiguous dash in comments
    "RUF002",   # ambiguous dash in docstrings
    "DTZ001",   # datetime without tzinfo
    "UP045",    # Use X | None for type annotations (Python 3.11+)
    "UP035",    # typing.Dict deprecated
    "UP006",    # Use dict instead of Dict
    "UP007",    # Use X | Y for type annotations
]
per-file-ignores = { "tests/*" = ["S101", "ANN201", "ANN001", "PLR6301", "PLR2004", "PLC1901", "F401", "INP001", "S105", "PLC2701", "DTZ001"] }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
addopts = "--cov=workflow_inspector --cov-fail-under=10 --tb=short"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow = marks tests as slow",
    "integration = marks tests as integration tests",
]

[tool.ty]
# Strict from day 1
error-on-warning = true

[tool.ty.environment]
python-version = "3.11"

[tool.ty.rules]
possibly-unresolved-reference = "error"
unused-ignore-comment = "warn"
